--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "browser-sync": "^1.3.5",
     "del": "^0.1.3",
+    "font-awesome": "^4.6.3",
     "gulp": "^3.8.7",
     "gulp-autoprefixer": "0.0.8",
     "gulp-buffer": "0.0.2",
@@ -29,11 +30,10 @@
     "gulp-ssh": "^0.2.2",
     "gulp-useref": "^1.0.2",
     "gulp-util": "^3.0.0",
+    "html5shiv": "^3.7.3",
+    "normalize.css": "^5.0.0",
+    "picturefill": "^3.0.2",
     "run-sequence": "^1.0.1"
-  },
-  "scripts": {
-    "postinstall": "npm update -g bower && bower install",
-    "postupdate": "bower update"
   },
   "repository": {
     "type": "git",
