--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "type": "git",
     "url": "https://github.com/hugoduraes/personal-website.git"
   },
-  "author": "",
+  "author": "Hugo Durães",
   "license": "ISC"
 }
