--- a/package.json
+++ b/package.json
@@ -5,30 +5,26 @@
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
-    "browser-sync": "^1.3.5",
-    "del": "^0.1.3",
+    "browser-sync": "^2.17.5",
+    "del": "^2.2.2",
     "font-awesome": "^4.6.3",
     "gulp": "^3.8.7",
-    "gulp-autoprefixer": "0.0.8",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-buffer": "0.0.2",
     "gulp-buster": "^1.0.0",
-    "gulp-filter": "^1.0.2",
-    "gulp-gzip": "0.0.8",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^1.0.0",
-    "gulp-less": "^1.3.3",
-    "gulp-load-plugins": "^0.5.3",
-    "gulp-minify-css": "^0.3.7",
-    "gulp-minify-html": "^0.1.4",
-    "gulp-notify": "^1.4.2",
-    "gulp-rev": "^2.0.1",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-filter": "^4.0.0",
+    "gulp-gzip": "^1.4.0",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-less": "^3.1.0",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-rev": "^7.1.2",
     "gulp-rev-napkin": "^0.1.0",
-    "gulp-rev-replace": "^0.3.1",
-    "gulp-rsync": "0.0.4",
-    "gulp-size": "^1.0.0",
-    "gulp-sourcemaps": "^1.1.1",
-    "gulp-ssh": "^0.2.2",
-    "gulp-useref": "^1.0.2",
+    "gulp-rev-replace": "^0.4.3",
+    "gulp-size": "^2.1.0",
+    "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.0",
     "html5shiv": "^3.7.3",
     "normalize.css": "^5.0.0",
