--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ addons:
   ssh_known_hosts: hugoduraes.com:32573
 script: "./node_modules/.bin/gulp dist"
 before_deploy:
-  - openssl aes-256-cbc -K $encrypted_1312388825a2_key -iv $encrypted_1312388825a2_iv -in .travis/travis_rsa.enc -out /tmp/travis_rsa -d
-  - rm .travis/travis_rsa.enc
+  - openssl aes-256-cbc -K $encrypted_b29e5146ef90_key -iv $encrypted_b29e5146ef90_iv -in .travis/travis_hugoduraes.enc -out /tmp/travis_hugoduraes -d
+  - rm .travis/travis_hugoduraes.enc
   - eval "$(ssh-agent -s)"
-  - chmod 600 /tmp/travis_rsa
-  - ssh-add /tmp/travis_rsa
-  - rm -f /tmp/travis_rsa
+  - chmod 600 /tmp/travis_hugoduraes
+  - ssh-add /tmp/travis_hugoduraes
+  - rm -f /tmp/travis_hugoduraes
 deploy:
   skip_cleanup: true
   provider: script
