--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,16 @@ addons:
   ssh_known_hosts: hugoduraes.com:32573
 script: "./node_modules/.bin/gulp dist"
 before_deploy:
-  - openssl aes-256-cbc -K $encrypted_b29e5146ef90_key -iv $encrypted_b29e5146ef90_iv -in .travis/travis_hugoduraes.enc -out /tmp/travis_hugoduraes -d
-  - rm .travis/travis_hugoduraes.enc
+  - openssl aes-256-cbc -K $encrypted_b29e5146ef90_key -iv $encrypted_b29e5146ef90_iv -in .travis/deploy-key.enc -out /tmp/deploy-key -d
+  - rm .travis/deploy-key.enc
   - eval "$(ssh-agent -s)"
-  - chmod 600 /tmp/travis_hugoduraes
-  - ssh-add /tmp/travis_hugoduraes
-  - rm -f /tmp/travis_hugoduraes
+  - chmod 600 /tmp/deploy-key
+  - ssh-add /tmp/deploy-key
+  - rm -f /tmp/deploy-key
 deploy:
   skip_cleanup: true
   provider: script
-  script: rsync -r --delete-after --quiet -e "ssh -p 32573" $TRAVIS_BUILD_DIR/public/* travis@hugoduraes.com:/var/www/hugoduraes.com/public/
+  script: rsync -r --delete-after --quiet -e "ssh -p 32573" $TRAVIS_BUILD_DIR/public/* deploy@hugoduraes.com:/var/www/hugoduraes.com/public/
   on:
     branch: master
 notifications:
