--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ branches:
   - master
 addons:
   ssh_known_hosts: hugoduraes.com:32573
-script: "./node_modules/.bin/gulp dist"
+script: ./node_modules/.bin/gulp dist
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_b29e5146ef90_key -iv $encrypted_b29e5146ef90_iv -in .travis/deploy-key.enc -out /tmp/deploy-key -d
   - rm .travis/deploy-key.enc
@@ -15,7 +15,8 @@ before_deploy:
 deploy:
   skip_cleanup: true
   provider: script
-  script: rsync -r --delete-after --quiet -e "ssh -p 32573" $TRAVIS_BUILD_DIR/public/* deploy@hugoduraes.com:/var/www/hugoduraes.com/public/
+  # https://linux.die.net/man/1/rsync
+  script: rsync -qazr --no-perms --force --delete -e "ssh -p 32573" $TRAVIS_BUILD_DIR/public/* deploy@hugoduraes.com:/var/www/hugoduraes.com/public/
   on:
     branch: master
 notifications:
