--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ branches:
   only:
   - master
 addons:
-  ssh_known_hosts: hugoduraes.com:32573
+  ssh_known_hosts: 178.62.99.191
 script: ./node_modules/.bin/gulp dist
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_b29e5146ef90_key -iv $encrypted_b29e5146ef90_iv -in .travis/deploy-key.enc -out /tmp/deploy-key -d
@@ -16,7 +16,7 @@ deploy:
   skip_cleanup: true
   provider: script
   # https://linux.die.net/man/1/rsync
-  script: rsync -qazr --no-perms --force --delete -e "ssh -p 32573" $TRAVIS_BUILD_DIR/public/* deploy@hugoduraes.com:/var/www/hugoduraes.com/public/
+  script: rsync -qazr --no-perms --force --delete $TRAVIS_BUILD_DIR/public/* deploy@178.62.99.191:/var/www/hugoduraes.com/public/
   on:
     branch: master
 notifications:
