--- a/package.json
+++ b/package.json
@@ -5,35 +5,34 @@
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
-    "browser-sync": "^2.17.5",
-    "del": "^2.2.2",
+    "browser-sync": "^2.26.3",
+    "del": "^4.1.0",
+    "fancy-log": "^1.3.3",
     "font-awesome": "^4.6.3",
-    "gulp": "^3.8.7",
-    "gulp-autoprefixer": "^3.1.1",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
     "gulp-buffer": "0.0.2",
     "gulp-buster": "^1.0.0",
-    "gulp-clean-css": "^2.0.13",
-    "gulp-filter": "^4.0.0",
+    "gulp-clean-css": "^4.0.0",
+    "gulp-filter": "^5.1.0",
     "gulp-gzip": "^1.4.0",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-imagemin": "^3.0.3",
-    "gulp-less": "^3.1.0",
-    "gulp-load-plugins": "^1.3.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-rev": "^7.1.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-less": "^4.0.1",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-rev": "^9.0.0",
     "gulp-rev-napkin": "^0.1.0",
     "gulp-rev-replace": "^0.4.3",
-    "gulp-size": "^2.1.0",
+    "gulp-size": "^3.0.0",
     "gulp-useref": "^3.1.2",
-    "gulp-util": "^3.0.0",
     "html5shiv": "^3.7.3",
-    "normalize.css": "^5.0.0",
-    "picturefill": "^3.0.2",
-    "run-sequence": "^1.0.1"
+    "normalize.css": "^8.0.1",
+    "picturefill": "^3.0.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hugoduraes/personal-website.git"
+    "url": "https://github.com/hugoduraes/hugoduraes.github.io.git"
   },
   "author": "Hugo Durães",
   "license": "ISC"
