add missing request package

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-useref": "^3.1.2",
     "html5shiv": "^3.7.3",
     "normalize.css": "^8.0.1",
-    "picturefill": "^3.0.2"
+    "picturefill": "^3.0.2",
+    "request": "^2.88.2"
   }
 }
