--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "hugoduraes",
   "version": "0.0.0",
+  "author": "Hugo Durães",
   "description": "",
+  "license": "ISC",
   "main": "gulpfile.js",
-  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hugoduraes/hugoduraes.github.io.git"
+  },
+  "scripts": {
+    "build": "gulp build",
+    "build:watch": "gulp"
+  },
   "devDependencies": {
     "browser-sync": "^3.0.3",
     "del": "^4.1.0",
     "fancy-log": "^1.3.3",
     "font-awesome": "^4.6.3",
     "gulp": "^5.0.0",
-    "gulp-autoprefixer": "^9.0.0",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-buffer": "0.0.2",
     "gulp-buster": "^1.0.0",
     "gulp-clean-css": "^4.0.0",
@@ -19,7 +28,6 @@
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-less": "^4.0.1",
-    "gulp-load-plugins": "^2.0.3",
     "gulp-notify": "^3.2.0",
     "gulp-rev": "^9.0.0",
     "gulp-rev-napkin": "^0.1.0",
@@ -28,12 +36,7 @@
     "gulp-useref": "^3.1.2",
     "html5shiv": "^3.7.3",
     "normalize.css": "^8.0.1",
-    "picturefill": "^3.0.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hugoduraes/hugoduraes.github.io.git"
-  },
-  "author": "Hugo Durães",
-  "license": "ISC"
+    "picturefill": "^3.0.2",
+    "request": "^2.88.2"
+  }
 }
